# parcelCounter

./: CMakeLists.txt  PlcMsg.txt  cameraCode.cpp  coco.names  messaging.cpp  messaging.h  yolo.cfg
client/: CMakeLists.txt  client.cpp
client/json-utils-library/: json_utils.cc
include/: yolo.cpp  yolo.hpp
